@@ -29,6 +29,12 @@ Changes for v2.02
 - Add interpretation of data bytes, in style of Protocol Builder, to disassembler in Manual Settings (Graham)
 - Add additional predefined constants, based on data from Mike England (Graham)
 - Fix bug in Hex indexOf routine, it was failing to check last position in file (Graham)
+-- Alpha 10
+- Add checkbox to disassembler to select whether or not to use predefined constants (Graham)
+- Add radio buttons to disassembler to select display format for S3C80 working registers (Graham)
+- Save states of checkbox and radio buttons in properties file between invocations (Graham)
+- Add button to hide/show upper left panel of Manual Settings, to make more space available for protocol data panel (Graham)
+- Add register addresses to pf and pd annotations in disassembly comments column (Graham)
 
 Changes for v2.01
 -- Alpha --
